Thu Feb 23 18:13:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosEvent/CEC_ProxyPushSupplier.cpp:
          Applied patch from Thomas Lockhart for a problem when
          TAO_HAS_CORBA_MESSAGING is non-zero and TAO_HAS_TYPED_EVENT_CHANNEL
          is undefined

        * tao/PortableServer/Operation_Table.h:
          Exported a struct from the dll

Thu Feb 23 12:30:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rlecompressor.mpb:
          Fuzz fix

Thu Feb 23 08:06:40 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/orbconf.h:
          ZIOP depends on messaging

Thu Feb 23 08:00:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rlecompressor.mpb:
        * tao/Compression/rle/RLECompressor.cpp:
        * tao/Compression/rle/RLECompressor.mpc:
        * tao/Compression/rle/RLECompressor_Factory.cpp:
        * tao/Compression/rle/TAO_RLECompressor.rc:
        * tests/Compression/RLECompressorTest.cpp:
          Updated for the move of the rle compressor to a new ACE library

        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/NVList.cpp:
          Layout changes

Tue Feb 21 14:47:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/Base_Compressor.h:
        * tao/Compression/Base_Compressor.cpp:
          Fixed wrong order of arguments of update_stats

Mon Feb 20 13:20:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Base.pidl:
          Removed not needed include

Mon Feb 20 13:10:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Base.pidl:
        * tao/IFR_Client/IFR_Basic.pidl:
        * tao/IFR_Client/IFR_Components.pidl:
        * tao/IFR_Client/IFR_Extended.pidl:
          Header cleanup

Mon Feb 20 12:58:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_argument/argument.h: